[package]
name = "hust-cli"
version = "0.1.1"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
edition = "2018"
description = "Hue bridge client"
repository = "https://github.com/UgnilJoZ/hust-cli"
license = "AGPL-3.0"

[[bin]]
name = "hust"
path = "src/main.rs"

[dependencies]
hust = "^0"
structopt = "0.3"
serde_derive = "0.8"
serde = "0.8"
serde_json = "0.8"