[package]
name = "hust-cli"
version = "0.1.2"
authors = ["Jan Ole Zabel <jan.zabel@posteo.de>"]
edition = "2018"
description = "Hue bridge client"
repository = "https://github.com/UgnilJoZ/hust-cli"
license = "AGPL-3.0"

[[bin]]
name = "hust"
path = "src/main.rs"

[dependencies]
hust = "0.2"
structopt = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"